--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -10,8 +10,7 @@ grade: stable
 confinement: strict
 
 architectures:
-  - build-on: amd64
-    build-for: amd64
+  - amd64
 
 apps:
   cluemaster-mediadisplay-core:
