build for amd64
-Added to speed up the build process and stop errors on build:

architectures:
  - amd64

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,12 +1,15 @@
 name: cluemaster-videoplayer-core
 base: core20 
-version: '2023.09.17'
+version: '2023.09.18'
 summary: Clumaster.io Video Player for Escape Rooms 
 description: |
   ClueMaster Video Player is a Dynamic TV Display software for escape rooms.
   It loops through videos and playes them. To be used in small kiosk devices.
 grade: stable 
-confinement: strict 
+confinement: strict
+
+architectures:
+  - amd64
 
 apps:
   cluemaster-mediadisplay-core:
