--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,6 @@
 name: cluemaster-videoplayer-core
 base: core20 
-version: '2024.05.06'
+version: '2024.07.10-DEVELOPMENT'
 summary: Clumaster.io Video Player for Escape Rooms 
 description: |
   ClueMaster Video Player is a Dynamic TV Display software for escape rooms.
