--- a/cluemaster_videoplayer_source/requirements.txt
+++ b/cluemaster_videoplayer_source/requirements.txt
@@ -1,4 +1,7 @@
-PyQt5~=5.14.1
-requests~=2.22.0
+PyQt5>=5.15.11
+requests>=2.32.3
 git+https://github.com/ClueMaster-LLC/python-mpv
-simplejson~=3.16.0
+simplejson>=3.19.2
+mpv>=1.0.7
+websockets>=12.0
+GPUtil>=1.4.0
