--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -132,6 +132,7 @@ parts:
       - libpq5
     python-packages:
       - PyQt5 ~= 5.14.1
+      - PyQt5-sip
       - requests
       - git+https://github.com/ClueMaster-LLC/python-mpv
       - simplejson
