--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -132,11 +132,11 @@ parts:
       - libpq5
     python-packages:
       - PyQt5 ~= 5.14.1
-      - PyQt5-sip
       - requests
-      - git+https://github.com/ClueMaster-LLC/python-mpv
+      #- git+https://github.com/ClueMaster-LLC/python-mpv
       - simplejson
       - psutil
+      - python-mpv == 0.5.2
     organize:
       usr/lib/*/samba/*: usr/lib/
 
