--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -122,6 +122,7 @@ parts:
     plugin: python
     source: .
     build-packages:
+      - python
       - python3-pip
       - python3-dev
       - gcc
@@ -136,7 +137,6 @@ parts:
       #- git+https://github.com/ClueMaster-LLC/python-mpv
       - simplejson
       - psutil
-      - wheel
       - python-mpv == 0.5.2
     organize:
       usr/lib/*/samba/*: usr/lib/
