--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -122,7 +122,7 @@ parts:
     plugin: python
     source: .
     build-packages:
-      - python3 ~= 3.9
+      - python ~= 3.9
       - python3-pip
       - python3-dev
       - gcc
