--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -64,27 +64,6 @@ parts:
       - libmpv1
       - mpv
       - ffmpeg
-    stage:
-      - -usrshare/alsa/alsa.conf
-      - -usr/share/alsa/cards/HDA-Intel.conf
-      - -usr/share/alsa/cards/USB-Audio.conf
-      - -usr/share/alsa/cards/aliases.conf
-      - -usr/share/alsa/pcm/center_lfe.conf
-      - -usr/share/alsa/pcm/default.conf
-      - -usr/share/alsa/pcm/dmix.conf
-      - -usr/share/alsa/pcm/dsnoop.conf
-      - -usr/share/alsa/pcm/front.conf
-      - -usr/share/alsa/pcm/hdmi.conf
-      - -usr/share/alsa/pcm/iec958.conf
-      - -usr/share/alsa/pcm/modem.conf
-      - -usr/share/alsa/pcm/rear.conf
-      - -usr/share/alsa/pcm/side.conf
-      - -usr/share/alsa/pcm/surround21.conf
-      - -usr/share/alsa/pcm/surround40.conf
-      - -usr/share/alsa/pcm/surround41.conf
-      - -usr/share/alsa/pcm/surround50.conf
-      - -usr/share/alsa/pcm/surround51.conf
-      - -usr/share/alsa/pcm/surround71.conf
 
   install-python:
     plugin: nil
@@ -122,6 +101,26 @@ parts:
       - libqt5multimedia5-plugins
       - python3-pyqt5.qtsvg
     stage:
+      - -usrshare/alsa/alsa.conf
+      - -usr/share/alsa/cards/HDA-Intel.conf
+      - -usr/share/alsa/cards/USB-Audio.conf
+      - -usr/share/alsa/cards/aliases.conf
+      - -usr/share/alsa/pcm/center_lfe.conf
+      - -usr/share/alsa/pcm/default.conf
+      - -usr/share/alsa/pcm/dmix.conf
+      - -usr/share/alsa/pcm/dsnoop.conf
+      - -usr/share/alsa/pcm/front.conf
+      - -usr/share/alsa/pcm/hdmi.conf
+      - -usr/share/alsa/pcm/iec958.conf
+      - -usr/share/alsa/pcm/modem.conf
+      - -usr/share/alsa/pcm/rear.conf
+      - -usr/share/alsa/pcm/side.conf
+      - -usr/share/alsa/pcm/surround21.conf
+      - -usr/share/alsa/pcm/surround40.conf
+      - -usr/share/alsa/pcm/surround41.conf
+      - -usr/share/alsa/pcm/surround50.conf
+      - -usr/share/alsa/pcm/surround51.conf
+      - -usr/share/alsa/pcm/surround71.c
       - -usr/lib/x86_64-linux-gnu/libFLAC.so.8.3.0
       - -usr/share/doc/libflac8/changelog.Debian.gz
       - -README.md
