--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -101,7 +101,7 @@ parts:
       - libqt5multimedia5-plugins
       - python3-pyqt5.qtsvg
     stage:
-      - -usrshare/alsa/alsa.conf
+      - -usr/share/alsa/alsa.conf
       - -usr/share/alsa/cards/HDA-Intel.conf
       - -usr/share/alsa/cards/USB-Audio.conf
       - -usr/share/alsa/cards/aliases.conf
@@ -120,7 +120,7 @@ parts:
       - -usr/share/alsa/pcm/surround41.conf
       - -usr/share/alsa/pcm/surround50.conf
       - -usr/share/alsa/pcm/surround51.conf
-      - -usr/share/alsa/pcm/surround71.c
+      - -usr/share/alsa/pcm/surround71.conf
       - -usr/lib/x86_64-linux-gnu/libFLAC.so.8.3.0
       - -usr/share/doc/libflac8/changelog.Debian.gz
       - -README.md
