--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -111,7 +111,7 @@ parts:
     plugin: nil
     source: .
     stage-packages:
-      - python3
+      #- python3
       - python3-dbus
       - pip
     override-build: |
