--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -162,6 +162,15 @@ parts:
       - python-mpv ~= 0.5.2
     organize:
       usr/lib/*/samba/*: usr/lib/
+    stage:
+      - -bin/activate
+      - -bin/activate.csh
+      - -bin/activate.fish
+      - -bin/pip
+      - -bin/pip3
+      - -bin/python
+      - -bin/python3
+      - -pyvenv.cfg
 
   desktop-qt5:
     source: https://github.com/ubuntu/snapcraft-desktop-helpers.git
