--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -64,6 +64,7 @@ parts:
     source: .
     stage-packages:
       - python3.9-venv
+      - python3-requests
     build-packages:
       - python3.9-venv
       - python3.9-dev
