--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -162,7 +162,7 @@ parts:
       - libqt5gui5
       - libgdk-pixbuf2.0-0
       - libqt5svg5 
-      - try: [appmenu-qt5]
+      #- try: [appmenu-qt5]
       - locales-all
       - xdg-user-dirs
       - libdrm2
