--- a/cluemaster_videoplayer_source/requirements.txt
+++ b/cluemaster_videoplayer_source/requirements.txt
@@ -1,7 +1,8 @@
-PyQt5>=5.15.11
-requests>=2.32.3
+PyQt5~=5.15.11
+requests~=2.32.3
 git+https://github.com/ClueMaster-LLC/python-mpv
-simplejson>=3.19.2
-mpv>=1.0.7
-websockets>=12.0
-GPUtil>=1.4.0
+simplejson~=3.19.2
+python-mpv==0.5.2
+mpv~=1.0.7
+websockets~=14.0
+GPUtil~=1.4.0
