--- a/snap/local/snapcraft(ORGIONAL).yaml
+++ b/snap/local/snapcraft(ORGIONAL).yaml
@@ -1,16 +1,15 @@
 name: cluemaster-videoplayer-core
-base: core22
-version: '2025.01.08-DEVELOPMENT'
+base: core20 
+version: '2024.07.10-DEVELOPMENT'
 summary: Clumaster.io Video Player for Escape Rooms 
 description: |
   ClueMaster Video Player is a Dynamic TV Display software for escape rooms.
-  It loops through videos and plays them. To be used in small kiosk devices.
+  It loops through videos and playes them. To be used in small kiosk devices.
 grade: stable 
 confinement: strict
 
 architectures:
-  - build-on: [amd64]
-    build-for: [amd64]
+  - amd64
 
 apps:
   cluemaster-mediadisplay-core:
@@ -21,16 +20,6 @@ apps:
     command: usr/local/bin/x11_kiosk_launch $SNAP/bin/desktop-launch $SNAP/bin/prepare-launch $SNAP/bin/python3 $SNAP/main.py
     environment:
       DISABLE_WAYLAND: 1
-    plugs:
-    - network  # For internet communication
-    - audio-playback  # To allow audio playback using PulseAudio
-    - pulseaudio  # For PulseAudio interaction
-    - opengl  # For graphics rendering with Ubuntu Frame
-    - wayland  # Wayland support for Ubuntu Frame
-    - shutdown
-    - alsa
-    - hardware-observe
-    - network-bind
 
   pulseaudio:
     command: bin/pulseaudio
@@ -54,32 +43,18 @@ apps:
     command: bin/config
 
 plugs:
-  audio-playback:
+  playback:
     interface: audio-playback
-
-  pulseaudio:
-    interface: pulseaudio
-
-  opengl:
-    interface: opengl
-
   wayland:
-    interface: wayland
-   
   network:
-    interface: network
-  
+  opengl:
   network-bind:
-    interface: network-bind
-    
   shutdown:
-    interface: shutdown
-    
   hardware-observe:
-    interface: hardware-observe
-    
   alsa:
-    interface: alsa
+
+slots:
+  audio-playback:
 
 parts:
   copy-source-code:
@@ -97,7 +72,6 @@ parts:
       - libvdpau1
       - i965-va-driver
       - libmpv1
-      #- libffi7 # ERROR FIX: mir_kiosk_x11: error while loading shared libraries: libffi.so.7 
       - va-driver-all
       - vdpau-driver-all
       - mesa-va-drivers
@@ -112,7 +86,6 @@ parts:
       - python3-pyqt5.qtmultimedia
       - libqt5multimedia5-plugins
       - python3-pyqt5.qtsvg
-      - libqt5multimedia5
     stage:
       - -usr/share/alsa/alsa.conf
       - -usr/share/alsa/cards/HDA-Intel.conf
@@ -134,15 +107,14 @@ parts:
       - -usr/share/alsa/pcm/surround50.conf
       - -usr/share/alsa/pcm/surround51.conf
       - -usr/share/alsa/pcm/surround71.conf
-      #- -usr/lib/x86_64-linux-gnu/libFLAC.so.8.3.0
-      #- -usr/share/doc/libflac8/changelog.Debian.gz
-      #- -README.md
-      #- -usr/lib/x86_64-linux-gnu/libX11-xcb.so.1.0.0
-      #- -usr/lib/x86_64-linux-gnu/libX11.so.6.3.0
-      #- -usr/share/doc/libx11-6/changelog.Debian.gz
-      #- -usr/share/doc/libx11-data/changelog.Debian.gz
-      #- -usr/share/doc/libx11-xcb1/changelog.Debian.gz
-
+      - -usr/lib/x86_64-linux-gnu/libFLAC.so.8.3.0
+      - -usr/share/doc/libflac8/changelog.Debian.gz
+      - -README.md
+      - -usr/lib/x86_64-linux-gnu/libX11-xcb.so.1.0.0
+      - -usr/lib/x86_64-linux-gnu/libX11.so.6.3.0
+      - -usr/share/doc/libx11-6/changelog.Debian.gz
+      - -usr/share/doc/libx11-data/changelog.Debian.gz
+      - -usr/share/doc/libx11-xcb1/changelog.Debian.gz
     stage-snaps: [mir-kiosk-x11]
 
   python-packages:
@@ -164,9 +136,6 @@ parts:
       - git+https://github.com/ClueMaster-LLC/python-mpv
       - simplejson
       - psutil
-      - websockets
-      - GPutil
-      #- libffi7 # ERROR FIX: mir_kiosk_x11: error while loading shared libraries: libffi.so.7 
     organize:
       usr/lib/*/samba/*: usr/lib/
 
@@ -181,8 +150,7 @@ parts:
       - dpkg-dev
     stage-packages:
       - libxkbcommon0
-      #- ttf-ubuntu-font-family #no longer included in CORE22+
-      - fonts-ubuntu
+      - ttf-ubuntu-font-family
       - dmz-cursor-theme
       - light-themes
       - adwaita-icon-theme
@@ -191,7 +159,7 @@ parts:
       - libqt5gui5
       - libgdk-pixbuf2.0-0
       - libqt5svg5 
-      #- try: [appmenu-qt5]
+      - try: [appmenu-qt5]
       - locales-all
       - xdg-user-dirs
       - libdrm2
@@ -208,11 +176,6 @@ parts:
     stage:
       - -usr/lib/x86_64-linux-gnu/libwebp.so.6.0.2
       - -usr/share/doc/libwebp6/changelog.Debian.gz
-      
-      - -urs/lib/* # added for file or permission errors.
-      - -usr/share/* # added for file or permission errors.
-      - -etc/* # added for file or permission errors.
-      - -usr/lib/x86_64-linux-gnu/* # added for file or permission errors.
 
   pulseaudio-common:
     source: bin
@@ -239,7 +202,6 @@ parts:
     source-depth: 1
     after: [ alsa-lib ]
     build-packages:
-      - meson
       - check
       - doxygen
       - intltool
@@ -264,9 +226,7 @@ parts:
       - libflac8
       - libglib2.0-0
       - libgomp1
-      #- libjson-c4
-      - libjson-c5 # Replace libjson-c4 with libjson-c5
-      - libc6-dev #testing to replace libjson-c4
+      - libjson-c4
       - libltdl7
       - libogg0
       - libsbc1
@@ -280,30 +240,32 @@ parts:
       - libvorbis0a
       - libvorbisenc2
     meson-parameters:
-      - --prefix=/usr
+      - --prefix="/usr"
       - --sysconfdir=/etc
       - --libexec=/usr/lib
       - --libdir=/usr/lib
       - --localstatedir=/var
-      - -Dgstreamer=disabled
-      - -Dbluez5-gstreamer=disabled
-      - -Dorc=disabled
-      - -Dgsettings=disabled
-      - -Dadrian-aec=false
-      - -Dgtk=disabled
-      - -Dhal-compat=false
-      - -Dwebrtc-aec=disabled
-      - -Doss-output=disabled
-      - -Djack=disabled
-      - -Dx11=disabled
-      - -Dsystem_user=root
-      - -Dsystem_group=root
-      - -Daccess_group=root
+      - -Dgstreamer="disabled"
+      - -Dbluez5-gstreamer="disabled"
+      - -Dorc="disabled"
+      - -Dgsettings="disabled"
+      - -Dadrian-aec="false"
+      - -Dgtk="disabled"
+      - -Dhal-compat="false"
+      - -Dwebrtc-aec="disabled"
+      - -Doss-output="disabled"
+      - -Djack="disabled"
+      - -Dx11="disabled"
+      - -Dsystem_user="root"
+      - -Dsystem_group="root"
+      - -Daccess_group="root"
     override-build: |
-      craftctl build
-      mkdir -p $CRAFT_PART_INSTALL/usr/share/applications     
+      snapcraftctl build
+      VER=$(cd $SNAPCRAFT_PART_SRC; git tag|sed 's/^v//')
+      snapcraftctl set-version $VER
+      mkdir -p $SNAPCRAFT_PART_INSTALL/usr/share/applications
     override-prime: |
-      craftctl prime
+      snapcraftctl prime
       find usr/share/doc/ -type f,l ! -name copyright | xargs rm -rf
     prime:
       - -usr/include
@@ -331,7 +293,7 @@ parts:
     prime:
       - -usr/lib/alsa-lib/*.la
     override-prime: |
-      craftctl prime
+      snapcraftctl prime
       # make links relative
       cd etc/alsa/conf.d
       for link in $(find . -type l); do
@@ -350,12 +312,6 @@ parts:
       ucm2: usr/share/alsa/ucm2
     prime:
       - -README.md
-
-  libnettle7:
-    plugin: dump
-    source: libnettle7/
-    organize:
-      "libnettle7/x86_64-linux-gnu/*": lib/
 
   extras:
     plugin: dump
@@ -403,4 +359,4 @@ layout:
     symlink: $SNAP/usr/share/alsa
   /usr/share/applications:
     bind: $SNAP/usr/share/applications
-    
+
