--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -300,7 +300,7 @@ parts:
       - -Dsystem_group=root
       - -Daccess_group=root
     override-build: |
-      craftctl build
+      craftctl default
       mkdir -p $CRAFT_PART_INSTALL/usr/share/applications     
     override-prime: |
       craftctl prime
